--- a/debian/control
+++ b/debian/control
@@ -4,8 +4,8 @@ Priority: optional
 Maintainer: Stefan Lippers-Hollmann <s.l-h@gmx.de>
 Build-Depends: cdbs, debhelper (>= 5.0.37), bzip2
 Standards-Version: 3.7.2
-XS-Vcs-Svn: svn://svn.berlios.de/fullstory/rt73-legacy/trunk
-XS-Vcs-Browser: http://svn.berlios.de/wsvn/fullstory/rt73-legacy/trunk/
+Vcs-Svn: svn://svn.berlios.de/fullstory/rt73-legacy/trunk
+Vcs-Browser: http://svn.berlios.de/wsvn/fullstory/rt73-legacy/trunk/
 
 Package: rt73-legacy-source
 Architecture: all
